--- a/examples.ipynb
+++ b/examples.ipynb
@@ -62,7 +62,7 @@
     "import networkx as nx\n",
     "G = nx.grid_2d_graph(4, 4)\n",
     "\n",
-    "# tranfer the grid to edge-based\n",
+    "# transform the grid to edge-based\n",
     "G_edge = nx.Graph()\n",
     "\n",
     "# create node as edge\n",
