--- a/examples.ipynb
+++ b/examples.ipynb
@@ -65,7 +65,7 @@
     "# transform the grid to edge-based\n",
     "G_edge = nx.Graph()\n",
     "\n",
-    "# create node as edge\n",
+    "# create nodes using edges\n",
     "for e in list(G.edges()):\n",
     "    G_edge.add_node(e)\n",
     "\n",
